Rip out obsolete Quarkus server
As a follow-up to a311e5e: "Partially refactor for testability,
modularity, and security", this commit removes the old Quarkus server
implementation in its entirety. There is now no actual server, just
domain logic. We'll replace the Quarkus gRPC server with a Vert.x one in
the future.

Because of their tight coupling to the Quarkus server implementation,
this change also removes a bunch of features we'll eventually want to
add back. These features include, but are not limited to:

- GitHub login
- API rate limiting
- Google Cloud Storage and Pub/Sub integration
- Email sending
- An actual gRPC server
- Periodic job scheduling

There wasn't much code to reuse in these integrations, so we'll rewrite
them from scratch with better abstractions under the new codebase's
architecture.